<resources>
    <string name="app_name">FoodApp</string>
    <string name="address">Address: </string>
    <string name="hintZip"> ex. 21702 </string>

    <string name="price"> Price </string>
    <string name="minP"> 1 </string>
    <string name="maxP"> 5 </string>
    <string name="minD"> 0mi </string>
    <string name="maxD"> 30mi </string>
    <string name="distance">Distance:</string>
    <string name="go">Go</string>
    <string name="find">Find Restaurant</string>


    <string name="spin"> Spin </string>
    <string name="respin"> Re-Spin </string>

    //types of food
    <string name="asian">Asian</string>
    <string name="greek">Greek</string>
    <string name="italian">Italian</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="american">American</string>
    <string name="mexican">Mexican</string>
    <string name="indian">Indian</string>
    <string name="space"> </string>
    <string name="action_settings">ActionSettings</string>
    <string name="title_activity_genre">GenreActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_spinner_practice">SpinnerPracticeActivity</string>


</resources>
